# Deal

./: README.md  main.py  pyproject.toml
core/: logger.py  webbridge.py
core/autoamtion/: __init__.py  webbridge_common.py  webbridge_runner.py
core/autoamtion/official_specs/: canon.py  common.py  dedupe.py  fujifilm.py  hasselblad.py  nikon.py  runner.py  sony.py
core/autoamtion/webbridge_platforms/: __init__.py  goofish.py  jd.py  pdd.py  tb.py
deal/: collector.py  config.py  io.py  models.py  parsing.py  plotting.py  runner.py  summary.py
tests/: test_config.py  test_logger.py  test_official_specs.py  test_parsing.py  test_platform_profiles.py  test_plotting.py  test_summary.py  test_webbridge_automation.py
